# neuro_network

./: .gitignore  CMakeLists.txt  main.cpp  neuronet.cpp  neuronet.h
bmp/: CMakeLists.txt  bitmap_image.hpp  bitmap_parse.cpp  bitmap_parse.hpp
bmp_generate/: CMakeLists.txt  bitmap_image.hpp  bitmap_test.cpp
